--- a/wiki/XmlEntoVector.wiki
+++ b/wiki/XmlEntoVector.wiki
@@ -16,11 +16,11 @@ Located within the `anopheles` sub-element, the initial conditions to start the 
 
 == Mosquito parameters ==
 
-Each anopheles elements has the following sub-elements: either `eir` or `monthlyEir`, `mosq`, and a list of zero or more `nonHumanHosts`.
+Each anopheles elements has the following sub-elements: either `EIR` or `monthlyEIR`, `mosq`, and a list of zero or more `nonHumanHosts`.
 
 === Entomological Inoculation Rate ===
 
-EIR can be specified either via 5 Fourier coefficients and a rotation factor (`eir` element) or via 12 monthly values plus an annual level (`monthlyEir` element). Exactly one of these elements must appear.
+EIR can be specified either via 5 Fourier coefficients and a rotation factor (`EIR` element) or via 12 monthly values plus an annual level (`monthlyEIR` element). Exactly one of these elements must appear.
 
 The user should be aware that the dynamic transmission modelled is not forced and often fluctuates to a greater or lesser extent (usually below the level input), particularly when close to the limit of sustainable transmission (e.g. with high case-management coverage). Running scenarios without interventions shows the dynamics of EIR and human infectiousness (the continuous output mode is convenient for viewing this).
 
@@ -28,7 +28,7 @@ The user should be aware that the dynamic transmission modelled is not forced an
 
 This is the older method (the only available method before schema version 22).
 
-The `eir` element describes the Entomological Infection Rate for this mosquito species, which is used as a target when fitting the emergence rate of adult mosquitoes. The EIR is given via a [http://en.wikipedia.org/wiki/Fourier_series Fourier series] and a rotation offset; more accurately, the exposed EIR, in units of bites per day, is:
+The `EIR` element describes the Entomological Infection Rate for this mosquito species, which is used as a target when fitting the emergence rate of adult mosquitoes. The EIR is given via a [http://en.wikipedia.org/wiki/Fourier_series Fourier series] and a rotation offset; more accurately, the exposed EIR, in units of bites per day, is:
 
 http://openmalaria.googlecode.com/svn/wiki/eqns/EIR_Fourier.png
 
@@ -42,7 +42,7 @@ MathML version (not so nice and less compatible):
 
 (Formula uses MathML. For IE, a [http://www.dessci.com/en/products/mathplayer/ plugin] is needed.)</wiki:comment>
 
-Here, Ξ,,t,, is the number of innoculations per person per day, where `t` is the day of year (from 0 to 364), `w = 2π / 365`, `θ` is the `EIRRotateAngle` attribute and a,,0,, to a,,2,,, b,,1,, and b,,2,, are the corresponding attributes of the `eir` element.
+Here, Ξ,,t,, is the number of innoculations per person per day, where `t` is the day of year (from 0 to 364), `w = 2π / 365`, `θ` is the `EIRRotateAngle` attribute and a,,0,, to a,,2,,, b,,1,, and b,,2,, are the corresponding attributes of the `EIR` element.
 
 If we introduce the function `f(t)` dependent on a,,n,, and b,,n,, for n≥1, we can reformulate Ξ,,t,, as
 
@@ -68,10 +68,10 @@ http://openmalaria.googlecode.com/svn/wiki/eqns/EIR_Fourier_annual.png
 
 As of schema version 22 this method of entering EIR was added to simplify entry of field data. Fourier coefficients are still used within the code (for smoothing), but are calculated internally.
 
-The `monthlyEir` element requires one attribute: `annualEIR`, specifying the total annual EIR as infectious bites per person per year. It should have a sequence of 12 child elements, named `item`, specifying the EIR in terms of infectious bites per person per month, in the months of January through December. An (unrealistic) example:
+The `monthlyEIR` element requires one attribute: `annualEIR`, specifying the total annual EIR as infectious bites per person per year. It should have a sequence of 12 child elements, named `item`, specifying the EIR in terms of infectious bites per person per month, in the months of January through December. An (unrealistic) example:
 
 {{{
-        <monthlyEir annualEIR="20">
+        <monthlyEIR annualEIR="20">
           <item>10</item>
           <item>1</item>
           <item>1</item>
@@ -84,7 +84,7 @@ The `monthlyEir` element requires one attribute: `annualEIR`, specifying the tot
           <item>1</item>
           <item>1</item>
           <item>1</item>
-        </monthlyEir>
+        </monthlyEIR>
 }}}
 
 === Mosquito lifecycle and human-interaction parameters ===
@@ -108,7 +108,7 @@ Other per-species mosquito parameters (except non-human-host interaction) are de
 
 Non-human parameters are contianed within two sets of elements (all called `nonHumanHosts`): for vector transmission as a whole, and per species.
 
-The first is a list of sub-elements of the `vector` element (under `entoData`), each containing just the category `name` and the `number` of hosts of that type.
+The first is a list of sub-elements of the `vector` element (under `entomology`), each containing just the category `name` and the `number` of hosts of that type.
 
 Mosquito-host interaction parameters for these categories are then described within the `anopheles` elements, with the attributes:
 
