--- a/wiki/ModelIntervHuman.wiki
+++ b/wiki/ModelIntervHuman.wiki
@@ -67,7 +67,15 @@ Use standard [ModelInterventions#Continuous_descriptions continuous] description
 
 The MDA intervention models some type of mass deployment of drugs. In the 5-day timestep models, these drugs are simply modelled (drug kills 100% of parasites in all patients receiving it with no lasting effect). With the 1-day time-step model MDA interventions are more flexible and can, for example, be configured as short-action anti-malarial deployment, deployment of SP-like drugs with a long prophylactic effect and mass screen and treat.
 
-With the 5-day time-step model no additional configuration is needed. With the 1-day TS model, an MDADescription element must be included, as, for example, below:
+With the 5-day time-step model no additional configuration is needed:
+{{{
+    <MDA>
+      <timed coverage="1" maxAge="999" minAge="0" time="0"/>
+      <timed coverage="1" maxAge="999" minAge="0" time="14"/>
+      <timed coverage="1" maxAge="999" minAge="0" time="28"/>
+    </MDA>
+}}}
+With the 1-day TS model, an MDADescription element must be included, as, for example, below:
 {{{
     <MDA>
       <description>
